# vcmp

./: .gitignore  LICENSE  README.md  settings.ini
.github/: CODEOWNERS  CONTRIBUTING.md
.github/workflows/: build.yml
test/: ini.c  main  randomarray.c  rsa.c
test/socks5/: CMakeLists.txt  test.c
vcmp/: CMakeLists.txt  main.c
vcmp/docs/: EVENTS.md  PROTOCOL.md  ROOMS.md
vcmp/frontends/web/: index.html
vcmp/frontends/web/css/: style.css
vcmp/frontends/web/js/: index.js
vcmp/include/vcmp/: api.h  dashboard.h  listener.h  protocol.h  rsa.h  socks5.h
vcmp/include/vcmp/util/: randdata.h  uuid.h
vcmp/include/vcmp/websockets/: frame.h  handshake.h  websockets.h
vcmp/lib/: ini.c  ini.h
vcmp/src/: api.c  dashboard.c  listener.c  protocol.c  rsa.c  socks5.c  uuid.c
vcmp/src/util/: randdata.c
vcmp/src/websockets/: frame.c  handshake.c  websockets.c
vcmp/tests/: test_rsa.c  test_socks5.c
